@@ -1,0 +1,3 @@
+c1a2:- (2:c2a2).
+c1a2:- not (2:c2a5).
+c1a3:- (2:c2a3).
