@@ -1,0 +1,10 @@
+c1a1:- not c1a2.
+c1a2:- not c1a1.
+c1a3:- not c1a4.
+c1a4:- not c1a3.
+c1a5:- not c1a6.
+c1a6:- not c1a7.
+c1a7:- not c1a8.
+c1a8:- not c1a7.
+c1a9:- not c1a10.
+c1a10:- not c1a9.
