@@ -1,0 +1,2 @@
+c2a9:- not (3:c3a4).
+c2a10:- not (3:c3a10), not (3:c3a4).
