@@ -1,0 +1,10 @@
+c3a1:- not c3a2.
+c3a2:- not c3a3.
+c3a3:- not c3a4.
+c3a4:- not c3a3.
+c3a5:- not c3a6.
+c3a6:- not c3a7.
+c3a7:- not c3a8.
+c3a8:- not c3a9.
+c3a9:- not c3a10.
+c3a10:- not c3a9.
