@@ -1,0 +1,9 @@
+digraph G {
+graph [name = "{0 2 5} {0 2 3 5} {0 4 10} "] 
+0 [hostname="localhost", port="5001", sigma="(c1a1 1 1 1),(c1a10 1 10 10),(c1a2 1 2 2),(c1a3 1 3 3),(c1a4 1 4 4),(c1a5 1 5 5),(c1a6 1 6 6),(c1a7 1 7 7),(c1a8 1 8 8),(c1a9 1 9 9)"];
+1 [hostname="localhost", port="5002", sigma="(c2a1 2 1 1),(c2a10 2 10 10),(c2a2 2 2 2),(c2a3 2 3 3),(c2a4 2 4 4),(c2a5 2 5 5),(c2a6 2 6 6),(c2a7 2 7 7),(c2a8 2 8 8),(c2a9 2 9 9)"];
+2 [hostname="localhost", port="5003", sigma="(c3a1 3 1 1),(c3a10 3 10 10),(c3a2 3 2 2),(c3a3 3 3 3),(c3a4 3 4 4),(c3a5 3 5 5),(c3a6 3 6 6),(c3a7 3 7 7),(c3a8 3 8 8),(c3a9 3 9 9)"];
+0->1 [interface="{} {0 2 3 5} {} "];
+1->2 [interface="{} {} {0 4 10} "];
+2->0 [interface="{0 2 5} {} {} "];
+}
